--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "homepage": "https://github.com/vladimirloskutov/frontend-project-lvl1#readme",
   "dependencies": {
     "promptly": "^3.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
