--- a/.github/workflow/nodejs.yml
+++ b/.github/workflow/nodejs.yml
@@ -1,40 +1,25 @@
-# Name of workflow
 name: Node CI
 
-# Run this workflow every time a new commit pushed to repository
-on:
-  - push
+on: [push]
 
 jobs:
+  build:
 
-  # The type of machine to run the job on
-  runs-on: ubuntu-latest
-  
-  strategy:
-      # Node versions list
+    runs-on: macos-latest
+
+    strategy:
       matrix:
         node-version: [14.x]
-  
-  steps:
-        # Check-out repository under GitHub workspace
-        # https://github.com/actions/checkout
+
+    steps:
       - uses: actions/checkout@v2
-        # Step's name
       - name: Use Node.js ${{ matrix.node-version }}
-        # Configures the node version used on GitHub-hosted runners
-        # https://github.com/actions/setup-node
         uses: actions/setup-node@v1
-        # The Node.js version to configure
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install, build
-        # Install and build project
-        run: |
-          make install
-        # Add environment variables
+      - name: npm install
+        run: make install
+      - name: run linger
+        run: make lint
         env:
           CI: true
-      - name: Run linter
-        # Run Linter
-        run: |
-          make lint
